# le-souffleur

./: .gitignore  README.md  dev.sh
backend/: pyproject.toml
backend/app/: extract.py  main.py  models.py  segment.py  tts.py
backend/tests/: test_api.py  test_extract.py  test_segment.py  test_tts.py
docs/superpowers/plans/: 2026-06-04-le-souffleur.md
docs/superpowers/specs/: 2026-06-04-le-souffleur-design.md
extension/: background.js  build.sh  manifest.json  sidepanel.html  sidepanel.js
frontend/: index.html  styles.css
frontend/js/: api.js  controls.js  main.js  player.js  reader.js  sync.js
frontend/test/: sync.test.js
server/: Cargo.toml
server/src/: arxiv.rs  main.rs
