[project]
name = "le-souffleur-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Skip the slow real-Kokoro tests by default; run them with `-m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that run real Kokoro synthesis (slow, needs model download)",
]
